# acados

./: .gitignore  CMakeLists.txt  README.md  package.xml
env-hooks/: export_acados_path.sh.in
interfaces/acados_template/acados_template/: acados_code_gen_opts.py
interfaces/acados_template/acados_template/c_templates_tera/: Makefile.in  multi_Makefile.in
