<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>acados</name>
    <version>0.5.3</version>
    <description>Fast and embedded solvers for nonlinear optimal control and nonlinear model predictive control</description>
    <maintainer email="jonathan.frey@imtek.uni-freiburg.de">Jonathan Frey</maintainer>
    <license>2-Clause BSD</license>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <test_depend>ament_cmake_ros</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>